--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
     <div id="contato">
             <h4>Contato</h4>
-            <p> Para dúvidas, informações, sugestões ou parcerias entre em contato! </p>
+            <p> Para dúvidas, informações, sugestões ou parcerias entre em contato!</p>
         <form action="/formulario-contato" method="post">
             <div>
                 <label for="nome">Nome:</label>
@@ -182,7 +182,7 @@
             </div>
         </form>
             <div class="button">
-                <button id="button-submit" type="submit">Enviar</button> 
+                <button id="button-submit" onclick="enviar()" value="Enviar" type="submit">Enviar</button> 
             </div>            
     </div> 
     <footer>
